--- a/client/src/app/globals.scss
+++ b/client/src/app/globals.scss
@@ -1,5 +1,46 @@
+//Displays Responsive
+$mini: 'max-width: 360px';
+$mobile: 'min-width: 361px) and (max-width: 767px';
+$tablet: 'min-width: 768px) and (max-width: 1024px';
+$notebook: 'min-width: 1025px) and (max-width: 1440px) and (min-height: 768px) and (max-height: 900px';
+$desktop: 'min-width: 1920px';
+
 //Imports
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato:wght@100&display=swap');
+
+@mixin titles{
+  text-align: center;
+  font-size: rem;
+  padding-top: 1%;
+  color: blue;
+}
+
+
+//Mixins
+@mixin border-gradient{
+  background: linear-gradient(#212121, #212121) padding-box,
+  linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  border-radius: 16px;
+  box-sizing: border-box;
+  animation: gradient 5s ease infinite;
+}
+
+@mixin divs{
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  scroll-snap-align: center;
+  scroll-snap-stop: normal;
+}
+
+//Keyframes
+@keyframes gradient {
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
+}
+
 
 //General Styles
 *{
@@ -25,31 +66,6 @@
     background: #8c00ff;
     color: whitesmoke;
   }
-}
-
-//Mixins
-@mixin border-gradient{
-  background: linear-gradient(#212121, #212121) padding-box,
-  linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
-  border: 2px solid transparent;
-  border-radius: 16px;
-  box-sizing: border-box;
-  animation: gradient 5s ease infinite;
-}
-
-@mixin divs{
-  position: relative;
-  height: 100vh;
-  width: 100%;
-  scroll-snap-align: center;
-  scroll-snap-stop: normal;
-}
-
-//Keyframes
-@keyframes gradient {
-  0% { background-position: 0% 50% }
-  50% { background-position: 100% 50% }
-  100% { background-position: 0% 50% }
 }
 
 
@@ -338,3 +354,26 @@ html{
     
   }
 }
+
+//VARIABLES
+
+
+//MIXINS
+
+//KEYFRAMES
+
+//STYLES (Mobile First)
+*{
+  margin: 0;
+  padding: 0;
+  a, button{
+    text-decoration: none;
+    color: inherit;
+    user-select: none;
+  }
+  h1{
+    @include titles();
+  }
+}
+
+body{}
